# GordianKnotNative

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
docs/: PLAN-V1.md
interface/: GordianKnotNative.psc
src/: Log.h  PCH.h  Plugin.cpp  VmCall.h
src/Events/: .gitkeep  ActivateHook.cpp  ActivateHook.h  EquipEventSink.cpp  EquipEventSink.h
src/Papyrus/: .gitkeep  GKNative.cpp  GKNative.h
src/Serialization/: .gitkeep  Records.h  Serialization.cpp  Serialization.h  TemplateStore.cpp  TemplateStore.h
src/State/: ActorRegistry.cpp  ActorRegistry.h  ActorState.h  AliasPool.cpp  AliasPool.h  AnimationRegistry.cpp  AnimationRegistry.h  AttributeRegistry.cpp  AttributeRegistry.h  CaseFold.h  Cell.h  FlagFilter.cpp  FlagFilter.h  Furniture.h  GameClock.h  GameState.cpp  GameState.h  Labyrinth.cpp  Labyrinth.h  Marker.h  OutfitRegistry.cpp  OutfitRegistry.h  QueueRegistry.cpp  QueueRegistry.h  Resource.h  ResourceRegistry.h  RoleFactions.cpp  RoleFactions.h
src/UI/: DebugOverlay.cpp  DebugOverlay.h
tools/: tail-log.ps1
